# Cr-ez-une-API-s-curis-e-RESTful-en-utilisant-Django-REST

./: .flake8  .gitignore  pyproject.toml  readme.md
config/: settings.py  urls.py
projects/: admin.py  models.py  permissions.py  serializers.py  views.py
projects/migrations/: 0001_initial.py  0002_issue_comment.py
users/: models.py  permissions.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_age_user_can_be_contacted_and_more.py  0003_alter_user_age.py
